# Comparative-Evaluation-of-Artifacts-Generated-by-LLMs-sast-dart

./: README.md  avaliacao-claude.md  prompt-avaliacao.txt  prompt.txt
gemini-3.5-flash-aistudio/: .gitignore  LICENSE  README.md  metadata.json  server.ts  setup.py
gemini-3.5-flash-aistudio/dart_sast/: __init__.py  engine.py  main.py  rules_definitions.py
gpt-5.5/: .gitignore  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
gpt-5.5/.github/workflows/: ci.yml  ci.yml:Zone.Identifier
gpt-5.5/dart_sast/: __init__.py  cli.py  models.py  reporters.py  scanner.py
gpt-5.5/dart_sast/rules/: __init__.py  base.py  pubspec_rules.py  regex_rules.py
gpt-5.5/docs/: ARCHITECTURE.md
gpt-5.5/tests/: test_cli.py  test_scanner.py
gpt-5.5/tests/fixtures/clean_app/: AndroidManifest.xml  pubspec.yaml
gpt-5.5/tests/fixtures/clean_app/lib/: main.dart
gpt-5.5/tests/fixtures/vulnerable_app/: AndroidManifest.xml  pubspec.yaml
gpt-5.5/tests/fixtures/vulnerable_app/lib/: main.dart
grok-fast/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
grok-fast/.github/workflows/: ci.yml
grok-fast/examples/: clean.dart  vulnerable.dart
grok-fast/src/dart_sast/: __init__.py  cli.py  reporter.py  scanner.py
grok-fast/src/dart_sast/rules/: __init__.py  base.py  command_injection.py  hardcoded_credentials.py  path_traversal.py  sql_injection.py
grok-fast/tests/: test_scanner.py
sonnet-4.6/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  pyproject.toml
sonnet-4.6/.github/workflows/: ci.yml  example-consumer-usage.yml
sonnet-4.6/docs/: ARCHITECTURE.md
sonnet-4.6/src/dart_sast/: __init__.py  __main__.py  cli.py
sonnet-4.6/src/dart_sast/engine/: __init__.py  finding.py  pubspec.py  registry.py  rule.py  scanner.py
sonnet-4.6/src/dart_sast/reporters/: __init__.py  console.py  json_reporter.py  sarif.py
sonnet-4.6/src/dart_sast/rules/: __init__.py  cwe1104_unmaintained_dependency.py  cwe209_error_message_info.py  cwe215_debug_info.py  cwe22_path_traversal.py  cwe22_path_traversal.py:Zone.Identifier  cwe287_improper_auth.py  cwe295_cert_validation.py  cwe312_cleartext_storage.py  cwe319_cleartext_transport.py  cwe327_weak_crypto.py  cwe338_weak_random.py  cwe347_signature_verification.py  cwe521_weak_password.py  cwe532_sensitive_log.py  cwe598_get_sensitive_data.py  cwe78_os_command_injection.py  cwe798_hardcoded_credentials.py  cwe89_sql_injection.py  cwe918_ssrf.py  cwe926_android_export.py  cwe942_cors_wildcard.py
sonnet-4.6/tests/: conftest.py  test_cli.py  test_console_reporter.py  test_integration_example_app.py  test_no_false_positives.py  test_pubspec_parser.py  test_rules_positive.py  test_scanner.py
sonnet-4.6/tests/fixtures/clean/: clean_app.dart
sonnet-4.6/tests/fixtures/vulnerable/: AndroidManifest.xml  pubspec.yaml  vulnerable_app.dart
(+9 files in other folders)
